# slexil2

./: .gitignore  DESCRIPTION  LICENSE  README.md  junk  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py  slexil.toml  tox.ini
demos/: inferno-threeLines.eaf  infernoDemo.py
docs/: mediaUpdateEventTiming.R
misc/: learnTierStructure.py
slexil/: aboutTexts.py  audioExtractor.py  eafParser.py  ijalLine.py  text.py  translationLine.py  webapp2.py  webapp3_run_locally.py  webapp4.py
testData/: Metcalf7ab_BLUEJAY_ch1.eaf  eafFileList.txt  overlappingTimes.eaf
tests/: cleanupEafList.R  demoInferno.py  demo_inferno.py  demo_pesh_paralysis.py  demo_webPacker.py  dfs.py  explore_ijalLine-inferno.py  explore_text-inferno.py  ijalUtils.js  inferno.html  inferno.yaml  makefile  notest_IjalLine.py  shaman.yaml  slexil.css  slexil.js  sortLines.py  test_AudioExtractor.py  test_EAFParser.py  test_IjalLine.py  test_IjalLineFromDict.py  test_MorphemeGloss.py  test_PracticeLists.py  test_Text.py  test_TextFromYaml.py  test_TierGuide.py  test_XmlFileUtils.py  test_eafParser.py  test_eafParserInferno.py  test_htmlInserter.py  test_infernoDemo.py  test_infernoDemo_toHTML.py  test_learnTierGuide.py  test_listTiers.py  test_standardizeIjalTierTable.py  test_tierParsing.py  test_webPacker.py  test_yamlFromEAF.py  test_yamlParser.py  tmpkz7zhebn.html  (+2 more)
utils/: eaf2html.py  eaf2yaml.py  eafCheck.py  eafStructure.py  makefile  segmentSeparation.py  tierQC.py  validXML.py  vidCheck  yaml2html.py
wheels/: slexil_package-2.3.14-py3-none-any.whl
yamlToEAF/: eafToWebpage.py  (+5 more)
(+641 files in other folders)
