[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slexil"
version = "2.8.2"

[tool.setuptools]
#package-dir = {"" = "."}
packages = ["slexil"]
include-package-data = true
 
[tool.setuptools.package-data]
'slexil' = ['*.css', '*.js']

